--- a/index.html
+++ b/index.html
@@ -1,46 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>challenge1</title>
 </head>
+
 <body>
-    <h3>skills</h3>
-    <table border="1px" >
+    <h2>This page is not fully made</h2>
+    <table cellspacing="10px">
         <tr>
             <td>
-                <table cellspacing="10px">
-                    <tr>
-                        <td>html</td><td>⭐⭐⭐⭐</td>
-                    </tr>
-                    <tr>
-                        <td>html</td><td>⭐⭐⭐⭐</td>
-                    </tr>
-                </table>
-
+                <img src="vijay.png" alt="vijay profile picture" height="250px" width="180px"
+                    style="border: 1px solid black;">
             </td>
             <td>
-                <table cellspacing="10px">
+                <table>
                     <tr>
-                        <td>hffftml</td><td>⭐⭐⭐⭐</td>
+                        <td>Name:</td>
+                        <td>Vijaykrishna Kommalapati</td>
+
                     </tr>
                     <tr>
-                        <td>html</td><td>⭐⭐⭐⭐</td>
+                        <td>Age:</td>
+                        <td id="age">23</td>
+
+                    </tr>
+                    <tr>
+                        <td>College:</td>
+                        <td id="age">BML Munjal University</td>
+
+                    </tr>
+                    <tr>
+                        <td>Degree:</td>
+                        <td id="age">B-tech</td>
+
+                    </tr>
+                    <tr>
+                        <td>Specialization:</td>
+                        <td id="age">Mechanical Engineering </td>
+
                     </tr>
                 </table>
-                
-
             </td>
         </tr>
     </table>
-    <form action="">
-        <label for="date">Date:</label>
-        <input type="color"><br>
-        <input type="email">
 
-    </form>
-  
+
+
 </body>
+
 </html>
