--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     let today = new Date();
     let y = today.getFullYear()-1997-1;
     let m = today.getMonth()+1;
-    let d = today.getDate()+4
+    let d = today.getDate()+2;
     var age = `${y} years, ${m} months, ${d} days.`;
     console.log(age);
     document.getElementById("age").innerHTML= age;
